@@ -12,5 +12,5 @@ requests==2.32.3
 tenacity==9.0.0
 ruamel.yaml==0.18.6
 schedule==1.2.2
-setuptools==75.2.0
+setuptools==75.3.0
 tmdbapis==1.2.21
